hay algo raro en modificar usuario

--- a/src/app/pages/inicio/datos-personales/datos-personales.page.html
+++ b/src/app/pages/inicio/datos-personales/datos-personales.page.html
@@ -38,7 +38,7 @@
           <br>
           <!--BOTON-->
           <ion-button expand="50px" style="align-content: center;align-items: center;display: flex;"
-          [routerLink]="['/m-datos']">Modificar datos</ion-button>
+          (click)="modificar(idUsuario)">Modificar datos</ion-button>
         </ion-card-content>
       </ion-card>
     </ion-row>
