--- a/src/app/pages/Shop/carrito/carrito.page.html
+++ b/src/app/pages/Shop/carrito/carrito.page.html
@@ -1,31 +1,31 @@
+<!-- carrito.page.html -->
 <ion-header [translucent]="true">
   <app-componente1></app-componente1>
 </ion-header>
-<!--#############################################PRODUCTOS################################################-->
 
 <ion-content class="ion-padding" [fullscreen]="true">
+  <!-- Mostrar los productos en el carrito -->
+  <ion-card class="custom-card" *ngFor="let producto of productosEnCarrito">
+    <!-- Muestra la información del producto aquí -->
+    <img [src]="producto.foto" alt="" class="card-image">
+    <ion-card-content class="card-content">
+      <ion-card-title class="titulo" style="font-size: 25px;">{{ producto.nombreProducto }}</ion-card-title>
+      <br>
+      <p class="subti" style="font-size: 25px;">Precio: ${{ producto.precio }}</p>
+      <!-- Otras propiedades del producto -->
+      <br>
+    </ion-card-content>
+  </ion-card>
 
-  <div class="card-container">
-    <ion-card class="custom-card">
-      <img src="assets/AUDIFONOS GAMERS/ag4.jpeg" alt="" class="card-image">
-      <ion-card-content class="card-content">
-        <ion-card-title class="titulo" style="font-size: 25px;">Audifonos gamers negro con naranja</ion-card-title>
-        <br>
-        <p class="subti" style="font-size: 25px;">Precio: $70.000</p>
-        <p>Cantidad: 2 </p> <ion-button class="btn" shape="round" >+</ion-button><ion-button class="btn" shape="round" >-</ion-button>
-        <br>
-      </ion-card-content>
-    </ion-card>
-  </div>
   <!--ESTO ES DE LA COMPRA FINAL-->
   <div class="card-container">
     <ion-card class="custom-card">
       <ion-card-content class="card-content">
         <ion-card-title style="font-size: 25px;">Total</ion-card-title>
-        <p class="subti"  style="font-size: 30px;">$70.000</p>
+        <p class="subti" style="font-size: 30px;">$ {{ calcularTotal() }}</p>
         <!--BOTONES-->
-        <ion-button color="danger"><ion-icon name="trash-bin-outline"></ion-icon></ion-button><ion-button  [routerLink]="['/carrito']">Finalizar compra</ion-button>
-        <!---->
+        <ion-button color="danger" (click)="vaciarCarrito()"><ion-icon name="trash-bin-outline"></ion-icon></ion-button>
+        <ion-button [routerLink]="['/carrito']">Finalizar compra</ion-button>
       </ion-card-content>
     </ion-card>
   </div>
