--- a/src/app/pages/Shop/carrito/carrito.page.html
+++ b/src/app/pages/Shop/carrito/carrito.page.html
@@ -11,8 +11,11 @@
     <ion-card-content class="card-content">
       <ion-card-title class="titulo" style="font-size: 25px;">{{ producto.nombreProducto }}</ion-card-title>
       <br>
-      <p class="subti" style="font-size: 25px;">Precio: ${{ producto.precio }}</p>
+      <p class="subti" style="font-size: 25px;">Precio: ${{ producto.precioTotal }}</p>
       <!-- Otras propiedades del producto -->
+      <p>Cantidad: {{ cantidad }}</p>
+      <ion-button class="btn" shape="round" (click)="aumentarCantidad(producto)">+</ion-button>
+      <ion-button class="btn" shape="round" (click)="disminuirCantidad(producto)">-</ion-button>
       <br>
     </ion-card-content>
   </ion-card>
