--- a/src/app/pages/inicio/inicio-sesion/inicio-sesion.page.html
+++ b/src/app/pages/inicio/inicio-sesion/inicio-sesion.page.html
@@ -27,7 +27,7 @@
       </mat-form-field>
     </div>
     <!--BOTON-->
-    <ion-button (click)="iniciarSesion(correo, contrasena)">Iniciar sesión</ion-button>
+    <ion-button (click)="iniciarSesion()">Iniciar sesión</ion-button>
     <!--MENSAJITO PARA SABER SI TIENE O NO UNA CUENTA-->
     <p>¿Aún no tiene una cuenta?<a [routerLink]="['/registro']">Registrese</a></p>
     <p>¿Se le olvido su clave?<a [routerLink]="['/recuperar-clave']">Recuperela</a></p><br><br>
