--- a/src/app/pages/Shop/historial/historial.page.scss
+++ b/src/app/pages/Shop/historial/historial.page.scss
@@ -60,4 +60,50 @@
   ion-content {
     --background: url(https://w0.peakpx.com/wallpaper/955/141/HD-wallpaper-purple-science-tech.jpg);
   }
-  
+  //esto es del toolbar:
+//COSA DEL CARRITO::after
+:host {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.demo-section+.demo-section {
+  margin-top: 16px;
+}
+
+.demo-section {
+  margin-right: 20px;
+  /* Agrega margen al lado derecho del primer elemento */
+  display: flex;
+  /* Utiliza flexbox para alinear verticalmente los elementos */
+  align-items: center;
+  /* Centra verticalmente los elementos */
+}
+
+//BUSQUEDA:
+/* Estilos para el contenedor que contiene el ion-searchbar */
+.search-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  --ion-background-color: #0D0D0D;
+}
+
+ion-searchbar {
+  color: white;
+  width: 400px;
+  text-align: left;
+}
+
+ion-toolbar {
+  --background: #79F2E6;
+}
+
+.no-product-message {
+  text-align: center;
+  color: red;
+  font-weight: bold;
+  margin-top: 2px;
+  font-size: 35px;
+}
