--- a/src/app/pages/admin/editar-p-admin/editar-p-admin.page.html
+++ b/src/app/pages/admin/editar-p-admin/editar-p-admin.page.html
@@ -1,5 +1,22 @@
 <ion-header [translucent]="true">
-  <app-componente1></app-componente1>
+  <ion-toolbar>
+    <!-- LOGO DEL CARRITO -->
+    <div class="demo-section" slot="end">
+      <mat-icon [matBadge]="0" matBadgeColor="primary" [routerLink]="['/carrito']" aria-hidden="false">
+        <ion-icon style="width: 30px; height: 30px; margin-right: 80px; color: #0D0D0D;;" name="cart-outline"></ion-icon>
+      </mat-icon>
+    </div>
+  
+    <!-- MENÚ DE BÚSQUEDA -->
+    <ion-buttons slot="start">
+      <ion-menu-button style="color: #0D0D0D;;"></ion-menu-button>
+    </ion-buttons>
+  
+    <!-- EL BUSCADOR -->
+    <div class="search-container">
+      <ion-searchbar [(ngModel)]="searchTerm" (ionInput)="searchProducts()"></ion-searchbar>
+    </div>
+  </ion-toolbar>
 </ion-header>
 
 <!--#############################################PRODUCTOS################################################-->
