--- a/src/app/pages/m-datos/m-datos.page.html
+++ b/src/app/pages/m-datos/m-datos.page.html
@@ -3,15 +3,16 @@
     <!-- LOGO DEL CARRITO -->
     <div class="demo-section" slot="end">
       <mat-icon [matBadge]="0" matBadgeColor="primary" [routerLink]="['/carrito']" aria-hidden="false">
-        <ion-icon style="width: 30px; height: 30px; margin-right: 80px; color: #0D0D0D;;" name="cart-outline"></ion-icon>
+        <ion-icon style="width: 30px; height: 30px; margin-right: 80px; color: #0D0D0D;;"
+          name="cart-outline"></ion-icon>
       </mat-icon>
     </div>
-  
+
     <!-- MENÚ DE BÚSQUEDA -->
     <ion-buttons slot="start">
       <ion-menu-button style="color: #0D0D0D;;"></ion-menu-button>
     </ion-buttons>
-  
+
     <!-- EL BUSCADOR -->
     <div class="search-container">
       <ion-searchbar [(ngModel)]="searchTerm" (ionChange)="searchProducts()"></ion-searchbar>
@@ -48,24 +49,25 @@
           </ion-input>
           <!-- VALIDACION -->
           <div class="error-message" *ngIf="errors.apellidoEnviado">{{ errors.apellidoEnviado }}</div><br>
+          <!-- EMAIL -->
+          <ion-input label="Email:" type="text" label-placement="floating" fill="outline" name="email"
+            [(ngModel)]="emailEnviado" disabled></ion-input><br>
           <!-- RUT -->
           <ion-input label="RUT:" type="text" label-placement="floating" fill="outline" name="rut" disabled
             [(ngModel)]="rutEnviado">
           </ion-input><br>
-          <!-- EMAIL -->
-          <ion-input label="Email:" type="text" label-placement="floating" fill="outline" name="email"
-            [(ngModel)]="emailEnviado" disabled></ion-input><br>
-            <!--MENSAJE DE ADVERTENCIA-->
-            <div class="icon-text-container">
-              <ion-icon style="font-size: 55px;color: rgb(95, 94, 94); margin-right: 10px;" name="alert-circle-outline"></ion-icon>
-              <p style="color: rgb(95, 94, 94); font-size: 12px;">
-                Por seguridad no puede cambiar ni su correo ni su rut, si requiere de cambio cree otra cuenta.
-              </p>
-            </div>
+          <!--MENSAJE DE ADVERTENCIA-->
+          <div class="icon-text-container">
+            <ion-icon style="font-size: 55px;color: rgb(95, 94, 94); margin-right: 10px;"
+              name="alert-circle-outline"></ion-icon>
+            <p style="color: rgb(95, 94, 94); font-size: 12px;">
+              Por seguridad no puede cambiar ni su correo ni su rut, si requiere de cambio cree otra cuenta.
+            </p>
+          </div>
           <!--BOTON-->
-          <ion-button expand="50px" style="align-items: center;display: flex;"
-            [disabled]="!formularioValido" class="guardar" (click)="editar()" [routerLink]="['/datos-personales']">Guardar cambios</ion-button>
-            
+          <ion-button expand="50px" style="align-items: center;display: flex;" [disabled]="!formularioValido"
+            class="guardar" (click)="editar()" [routerLink]="['/datos-personales']">Guardar cambios</ion-button>
+
         </ion-card-content>
       </ion-card>
     </ion-row>
