--- a/src/app/pages/Shop/tienda/tienda.page.html
+++ b/src/app/pages/Shop/tienda/tienda.page.html
@@ -48,10 +48,10 @@
           <ion-card-title class="ion-title">{{ producto.nombreProducto }}</ion-card-title>
           <ion-card-content>
             <td>${{ producto.precio | currency:'CL':true:'4.0-0' }}</td>
-            <ion-button class="center-buttons" [routerLink]="['/ag3', producto.idProducto]">Ver detalles</ion-button>
+            <ion-button class="center-buttons" *ngIf="rol == 1"  (click)="detalle(producto)">Detalles</ion-button>
             <ion-button class="center-buttons" *ngIf="rol == 2" (click)="modificar(producto)">Modificar</ion-button>
             <ion-button class="borrar" *ngIf="rol == 2" (click)="eliminar(producto)" >Eliminar</ion-button>
-            <ion-button (click)="agregarAlCarrito(producto)">Agregar al carrito</ion-button>
+            <ion-button *ngIf="rol == 1"  (click)="agregarAlCarrito(producto)">Agregar</ion-button>
           </ion-card-content>
         </ion-card-header>
       </ion-card>      
