--- a/src/app/pages/categoria/relojdig/relojdig.page.html
+++ b/src/app/pages/categoria/relojdig/relojdig.page.html
@@ -28,12 +28,12 @@
     <div *ngIf="noProductFound()" class="no-product-message">No existe ese producto</div>
     <!--PRIMER PRODUCTO-->
     <ion-row>
-      <ion-card *ngFor="let producto of arregloProductosResultado">
+      <ion-card *ngFor="let producto of arregloProductosResultado" (click)="ver(producto)">
         <ion-img [src]="producto.foto" alt="aqui habia una imagen"></ion-img>
         <ion-card-header>
           <ion-card-title class="ion-title">{{ producto.nombreProducto }}</ion-card-title>
           <ion-card-content>
-            <td>${{ producto.precio | currency:'CL':true:'4.0-0' }}</td>
+            <p>{{ producto.precio | currency:'$':true:'4.0-0' }}</p>
           </ion-card-content>
         </ion-card-header>
       </ion-card>
