--- a/src/app/pages/productos/ag3/ag3.page.html
+++ b/src/app/pages/productos/ag3/ag3.page.html
@@ -3,15 +3,16 @@
     <!-- LOGO DEL CARRITO -->
     <div class="demo-section" slot="end">
       <mat-icon [matBadge]="0" matBadgeColor="primary" [routerLink]="['/carrito']" aria-hidden="false">
-        <ion-icon style="width: 30px; height: 30px; margin-right: 80px; color: #0D0D0D;;" name="cart-outline"></ion-icon>
+        <ion-icon style="width: 30px; height: 30px; margin-right: 80px; color: #0D0D0D;;"
+          name="cart-outline"></ion-icon>
       </mat-icon>
     </div>
-  
+
     <!-- MENÚ DE BÚSQUEDA -->
     <ion-buttons slot="start">
       <ion-menu-button style="color: #0D0D0D;;"></ion-menu-button>
     </ion-buttons>
-  
+
     <!-- EL BUSCADOR -->
     <div class="search-container">
       <ion-searchbar [(ngModel)]="searchTerm" (ionChange)="searchProducts()"></ion-searchbar>
@@ -19,20 +20,21 @@
   </ion-toolbar>
 </ion-header>
 <!--################################################PRODUCTOS########################################-->
-  <ion-content class="ion-padding">
-    <div class="card-container">
-      <ion-card class="custom-card">
-        <img   [src]="imagenPValue" alt="" class="card-image">
-        <ion-card-content class="card-content">
-          <ion-card-title class="titulo">{{ nombrePValue }}</ion-card-title>
-          <p class="subti" style="font-size: 25px;">Precio: {{ precioPValue | currency:'$':true:'4.0-0' }}</p>
-          <p class="subti">Descripción:</p>
-          <p>{{ descripcionPValue }}</p>
-          <ion-button [routerLink]="['/carrito']">Agregar al carrito</ion-button>
-        </ion-card-content>
-      </ion-card>
-      <br><br><br>
-    </div>
+<ion-content class="ion-padding">
+  <div class="card-container">
+    <ion-card class="custom-card">
+      <img [src]="imagenPValue" alt="" class="card-image">
+      <ion-card-content class="card-content">
+        <ion-card-title class="titulo">{{ nombrePValue }}</ion-card-title>
+        <p class="subti" style="font-size: 25px;">Precio: {{ precioPValue | currency:'$':true:'4.0-0' }}</p>
+        <p class="subti">Descripción:</p>
+        <p>{{ descripcionPValue }}</p>
+        <!-- En tu plantilla HTML -->
+        <ion-button (click)="agregarAlCarrito()">Agregar al carrito</ion-button>
+      </ion-card-content>
+    </ion-card>
     <br><br><br>
-    <app-componente2></app-componente2>
-  </ion-content>
+  </div>
+  <br><br><br>
+  <app-componente2></app-componente2>
+</ion-content>
