no entra a carrito

--- a/src/app/components/componente1/componente1.component.html
+++ b/src/app/components/componente1/componente1.component.html
@@ -1,10 +1,12 @@
 <ion-toolbar>
   <!-- LOGO DEL CARRITO -->
-  <div class="demo-section" slot="end">
-    <mat-icon [matBadge]="cantidad" matBadgeColor="primary" [routerLink]="['/carrito']" aria-hidden="false">
-      <ion-icon style="width: 30px; height: 30px; margin-right: 80px; color: #0D0D0D;;" name="cart-outline"></ion-icon>
-    </mat-icon>
-  </div>
+<div class="demo-section" slot="end" *ngIf="idRol === 1 || idRol === 2">
+  <mat-icon [matBadge]="cantidad" matBadgeColor="primary" [routerLink]="['/carrito']" aria-hidden="false">
+    <ion-icon style="width: 30px; height: 30px; margin-right: 80px; color: #0D0D0D;;" name="cart-outline"></ion-icon>
+  </mat-icon>
+</div>
+
+
 
   <!-- MENÚ DE BÚSQUEDA -->
   <ion-buttons slot="start">
