esta lo de modificar clave

--- a/src/app/pages/inicio/datos-personales/datos-personales.page.html
+++ b/src/app/pages/inicio/datos-personales/datos-personales.page.html
@@ -55,6 +55,8 @@
           <br>
           <!--BOTON-->
           <ion-button expand="50px" style="align-content: center;align-items: center;display: flex;"
+           [routerLink]="['/modificar-clave']">Modificar contraseña</ion-button>
+          <ion-button expand="50px" style="align-content: center;align-items: center;display: flex;"
           (click)="modificar()">Modificar datos</ion-button>
         </ion-card-content>
       </ion-card>
