--- a/src/app/pages/inicio/inicio-sesion/inicio-sesion.page.html
+++ b/src/app/pages/inicio/inicio-sesion/inicio-sesion.page.html
@@ -29,6 +29,6 @@
     <ion-button (click)="iniciarSesion()">Iniciar sesión</ion-button>
     <!--MENSAJITO PARA SABER SI TIENE O NO UNA CUENTA-->
     <p>¿Aún no tiene una cuenta?<a [routerLink]="['/registro']">Registrese</a></p>
-    <p>¿Se le olvido su clave?<a [routerLink]="['/recuperar-clave']">Recuperela</a></p><br><br>
+    <p>¿Se le olvido su clave?<a [routerLink]="['/correo']">Recuperela</a></p><br><br>
   </ion-card>
 </ion-content>
